--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"express": "^4.18.2"
+	}
 }
